// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getEndpointDefinitionList /store/order 1`] = `
{
    "endpoints": [
        {
            "alias": "placeOrder",
            "description": "Place a new order in the store",
            "errors": [
                {
                    "description": "Invalid input",
                    "schema": "z.object({
}).passthrough()",
                    "status": 405,
                },
            ],
            "method": "post",
            "parameters": [
                {
                    "name": "body",
                    "schema": "Order",
                    "type": "Body",
                },
            ],
            "path": "/store/order",
            "requestFormat": "form-url",
            "response": "Order",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/Order",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid input",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "405",
                },
            ],
        },
    ],
}
`;

exports[`getEndpointDefinitionList should return responses if options.withAllResponses is true 1`] = `
{
    "endpoints": [
        {
            "alias": "findPetsByStatus",
            "description": "Multiple status values can be provided with comma separated strings",
            "errors": [
                {
                    "description": "Invalid status value",
                    "schema": "z.string()",
                    "status": 400,
                },
                {
                    "description": "Network error",
                    "schema": "z.object({
}).passthrough()",
                    "status": 500,
                },
            ],
            "method": "get",
            "parameters": [],
            "path": "/pet/findByStatus",
            "requestFormat": "json",
            "response": "z.array(Pet)",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "items": {
                            "$ref": "#/components/schemas/Pet",
                            "metadata": {
                                "circularReferences": [],
                                "dependencyGraph": {
                                    "depth": 0,
                                    "referencedBy": [],
                                    "references": [],
                                },
                                "nullable": false,
                                "required": false,
                                "zodChain": {
                                    "defaults": [],
                                    "presence": ".optional()",
                                    "validations": [],
                                },
                            },
                        },
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "array",
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid status value",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "string",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "Network error",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "500",
                },
            ],
        },
        {
            "alias": "findPetsByTags",
            "description": "Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.",
            "errors": [
                {
                    "description": "Invalid tag value",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
            ],
            "method": "get",
            "parameters": [],
            "path": "/pet/findByTags",
            "requestFormat": "json",
            "response": "z.array(Pet)",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "items": {
                            "$ref": "#/components/schemas/Pet",
                            "metadata": {
                                "circularReferences": [],
                                "dependencyGraph": {
                                    "depth": 0,
                                    "referencedBy": [],
                                    "references": [],
                                },
                                "nullable": false,
                                "required": false,
                                "zodChain": {
                                    "defaults": [],
                                    "presence": ".optional()",
                                    "validations": [],
                                },
                            },
                        },
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "array",
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid tag value",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
            ],
        },
    ],
}
`;

exports[`petstore.yaml 1`] = `
{
    "endpoints": [
        {
            "alias": "addPet",
            "description": "Add a new pet to the store",
            "errors": [
                {
                    "description": "Invalid input",
                    "schema": "z.object({
}).passthrough()",
                    "status": 405,
                },
            ],
            "method": "post",
            "parameters": [
                {
                    "description": "Create a new pet in the store",
                    "name": "body",
                    "schema": "Pet",
                    "type": "Body",
                },
            ],
            "path": "/pet",
            "requestFormat": "form-url",
            "response": "Pet",
            "responses": [
                {
                    "description": "Successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/Pet",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid input",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "405",
                },
            ],
        },
        {
            "alias": "updatePet",
            "description": "Update an existing pet by Id",
            "errors": [
                {
                    "description": "Invalid ID supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
                {
                    "description": "Pet not found",
                    "schema": "z.object({
}).passthrough()",
                    "status": 404,
                },
                {
                    "description": "Validation exception",
                    "schema": "z.object({
}).passthrough()",
                    "status": 405,
                },
            ],
            "method": "put",
            "parameters": [
                {
                    "description": "Update an existent pet in the store",
                    "name": "body",
                    "schema": "Pet",
                    "type": "Body",
                },
            ],
            "path": "/pet",
            "requestFormat": "form-url",
            "response": "Pet",
            "responses": [
                {
                    "description": "Successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/Pet",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid ID supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "Pet not found",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "404",
                },
                {
                    "description": "Validation exception",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "405",
                },
            ],
        },
        {
            "alias": "getPetById",
            "description": "Returns a single pet",
            "errors": [
                {
                    "description": "Invalid ID supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
                {
                    "description": "Pet not found",
                    "schema": "z.object({
}).passthrough()",
                    "status": 404,
                },
            ],
            "method": "get",
            "parameters": [
                {
                    "constraints": {
                        "format": "int64",
                    },
                    "description": "ID of pet to return",
                    "name": "petId",
                    "schema": "z.number().int()",
                    "type": "Path",
                },
            ],
            "path": "/pet/{petId}",
            "requestFormat": "json",
            "response": "Pet",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/Pet",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid ID supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "Pet not found",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "404",
                },
            ],
        },
        {
            "alias": "updatePetWithForm",
            "errors": [
                {
                    "description": "Invalid input",
                    "schema": "z.object({
}).passthrough()",
                    "status": 405,
                },
            ],
            "method": "post",
            "parameters": [
                {
                    "constraints": {
                        "format": "int64",
                    },
                    "description": "ID of pet that needs to be updated",
                    "name": "petId",
                    "schema": "z.number().int()",
                    "type": "Path",
                },
                {
                    "description": "Name of pet that needs to be updated",
                    "name": "name",
                    "schema": "z.string()",
                    "type": "Query",
                },
                {
                    "description": "Status of pet that needs to be updated",
                    "name": "status",
                    "schema": "z.string()",
                    "type": "Query",
                },
            ],
            "path": "/pet/{petId}",
            "requestFormat": "json",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "Invalid input",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "405",
                },
            ],
        },
        {
            "alias": "deletePet",
            "description": "delete a pet",
            "errors": [
                {
                    "description": "Invalid pet value",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
            ],
            "method": "delete",
            "parameters": [
                {
                    "name": "api_key",
                    "schema": "z.string()",
                    "type": "Header",
                },
                {
                    "constraints": {
                        "format": "int64",
                    },
                    "description": "Pet id to delete",
                    "name": "petId",
                    "schema": "z.number().int()",
                    "type": "Path",
                },
            ],
            "path": "/pet/{petId}",
            "requestFormat": "json",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "Invalid pet value",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
            ],
        },
        {
            "alias": "uploadFile",
            "errors": [],
            "method": "post",
            "parameters": [
                {
                    "constraints": {
                        "format": "int64",
                    },
                    "description": "ID of pet to update",
                    "name": "petId",
                    "schema": "z.number().int()",
                    "type": "Path",
                },
                {
                    "description": "Additional Metadata",
                    "name": "additionalMetadata",
                    "schema": "z.string()",
                    "type": "Query",
                },
            ],
            "path": "/pet/{petId}/uploadImage",
            "requestFormat": "json",
            "response": "ApiResponse",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/ApiResponse",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
            ],
        },
        {
            "alias": "findPetsByStatus",
            "description": "Multiple status values can be provided with comma separated strings",
            "errors": [
                {
                    "description": "Invalid status value",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
            ],
            "method": "get",
            "parameters": [
                {
                    "constraints": {
                        "enum": [
                            "available",
                            "pending",
                            "sold",
                        ],
                    },
                    "default": "available",
                    "description": "Status values that need to be considered for filter",
                    "name": "status",
                    "schema": "z.enum(["available", "pending", "sold"])",
                    "type": "Query",
                },
            ],
            "path": "/pet/findByStatus",
            "requestFormat": "json",
            "response": "z.array(Pet)",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "items": {
                            "$ref": "#/components/schemas/Pet",
                            "metadata": {
                                "circularReferences": [],
                                "dependencyGraph": {
                                    "depth": 0,
                                    "referencedBy": [],
                                    "references": [],
                                },
                                "nullable": false,
                                "required": false,
                                "zodChain": {
                                    "defaults": [],
                                    "presence": ".optional()",
                                    "validations": [],
                                },
                            },
                        },
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "array",
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid status value",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
            ],
        },
        {
            "alias": "findPetsByTags",
            "description": "Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.",
            "errors": [
                {
                    "description": "Invalid tag value",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
            ],
            "method": "get",
            "parameters": [
                {
                    "description": "Tags to filter by",
                    "name": "tags",
                    "schema": "z.array(z.string())",
                    "type": "Query",
                },
            ],
            "path": "/pet/findByTags",
            "requestFormat": "json",
            "response": "z.array(Pet)",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "items": {
                            "$ref": "#/components/schemas/Pet",
                            "metadata": {
                                "circularReferences": [],
                                "dependencyGraph": {
                                    "depth": 0,
                                    "referencedBy": [],
                                    "references": [],
                                },
                                "nullable": false,
                                "required": false,
                                "zodChain": {
                                    "defaults": [],
                                    "presence": ".optional()",
                                    "validations": [],
                                },
                            },
                        },
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "array",
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid tag value",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
            ],
        },
        {
            "alias": "getInventory",
            "description": "Returns a map of status codes to quantities",
            "errors": [],
            "method": "get",
            "parameters": [],
            "path": "/store/inventory",
            "requestFormat": "json",
            "response": "z.object({
}).catchall(z.number().int())",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "additionalProperties": {
                            "format": "int32",
                            "metadata": {
                                "circularReferences": [],
                                "dependencyGraph": {
                                    "depth": 0,
                                    "referencedBy": [],
                                    "references": [],
                                },
                                "nullable": false,
                                "required": false,
                                "zodChain": {
                                    "defaults": [],
                                    "presence": ".optional()",
                                    "validations": [
                                        ".int()",
                                    ],
                                },
                            },
                            "type": "integer",
                        },
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "200",
                },
            ],
        },
        {
            "alias": "placeOrder",
            "description": "Place a new order in the store",
            "errors": [
                {
                    "description": "Invalid input",
                    "schema": "z.object({
}).passthrough()",
                    "status": 405,
                },
            ],
            "method": "post",
            "parameters": [
                {
                    "name": "body",
                    "schema": "Order",
                    "type": "Body",
                },
            ],
            "path": "/store/order",
            "requestFormat": "form-url",
            "response": "Order",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/Order",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid input",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "405",
                },
            ],
        },
        {
            "alias": "getOrderById",
            "description": "For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions.",
            "errors": [
                {
                    "description": "Invalid ID supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
                {
                    "description": "Order not found",
                    "schema": "z.object({
}).passthrough()",
                    "status": 404,
                },
            ],
            "method": "get",
            "parameters": [
                {
                    "constraints": {
                        "format": "int64",
                    },
                    "description": "ID of order that needs to be fetched",
                    "name": "orderId",
                    "schema": "z.number().int()",
                    "type": "Path",
                },
            ],
            "path": "/store/order/{orderId}",
            "requestFormat": "json",
            "response": "Order",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/Order",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid ID supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "Order not found",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "404",
                },
            ],
        },
        {
            "alias": "deleteOrder",
            "description": "For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors",
            "errors": [
                {
                    "description": "Invalid ID supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
                {
                    "description": "Order not found",
                    "schema": "z.object({
}).passthrough()",
                    "status": 404,
                },
            ],
            "method": "delete",
            "parameters": [
                {
                    "constraints": {
                        "format": "int64",
                    },
                    "description": "ID of the order that needs to be deleted",
                    "name": "orderId",
                    "schema": "z.number().int()",
                    "type": "Path",
                },
            ],
            "path": "/store/order/{orderId}",
            "requestFormat": "json",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "Invalid ID supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "Order not found",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "404",
                },
            ],
        },
        {
            "alias": "createUser",
            "description": "This can only be done by the logged in user.",
            "errors": [
                {
                    "description": "successful operation",
                    "schema": "User",
                    "status": "default",
                },
            ],
            "method": "post",
            "parameters": [
                {
                    "description": "Created user object",
                    "name": "body",
                    "schema": "User",
                    "type": "Body",
                },
            ],
            "path": "/user",
            "requestFormat": "form-url",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/User",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "default",
                },
            ],
        },
        {
            "alias": "getUserByName",
            "errors": [
                {
                    "description": "Invalid username supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
                {
                    "description": "User not found",
                    "schema": "z.object({
}).passthrough()",
                    "status": 404,
                },
            ],
            "method": "get",
            "parameters": [
                {
                    "description": "The name that needs to be fetched. Use user1 for testing. ",
                    "name": "username",
                    "schema": "z.string()",
                    "type": "Path",
                },
            ],
            "path": "/user/{username}",
            "requestFormat": "json",
            "response": "User",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/User",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid username supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "User not found",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "404",
                },
            ],
        },
        {
            "alias": "updateUser",
            "description": "This can only be done by the logged in user.",
            "errors": [
                {
                    "description": "successful operation",
                    "schema": "z.object({
}).passthrough()",
                    "status": "default",
                },
            ],
            "method": "put",
            "parameters": [
                {
                    "description": "name that need to be deleted",
                    "name": "username",
                    "schema": "z.string()",
                    "type": "Path",
                },
                {
                    "description": "Update an existent user in the store",
                    "name": "body",
                    "schema": "User",
                    "type": "Body",
                },
            ],
            "path": "/user/{username}",
            "requestFormat": "form-url",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "default",
                },
            ],
        },
        {
            "alias": "deleteUser",
            "description": "This can only be done by the logged in user.",
            "errors": [
                {
                    "description": "Invalid username supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
                {
                    "description": "User not found",
                    "schema": "z.object({
}).passthrough()",
                    "status": 404,
                },
            ],
            "method": "delete",
            "parameters": [
                {
                    "description": "The name that needs to be deleted",
                    "name": "username",
                    "schema": "z.string()",
                    "type": "Path",
                },
            ],
            "path": "/user/{username}",
            "requestFormat": "json",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "Invalid username supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
                {
                    "description": "User not found",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "404",
                },
            ],
        },
        {
            "alias": "createUsersWithListInput",
            "description": "Creates list of users with given input array",
            "errors": [
                {
                    "description": "successful operation",
                    "schema": "z.object({
}).passthrough()",
                    "status": "default",
                },
            ],
            "method": "post",
            "parameters": [
                {
                    "name": "body",
                    "schema": "z.array(User)",
                    "type": "Body",
                },
            ],
            "path": "/user/createWithList",
            "requestFormat": "json",
            "response": "User",
            "responses": [
                {
                    "description": "Successful operation",
                    "schema": {
                        "$ref": "#/components/schemas/User",
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                    },
                    "statusCode": "200",
                },
                {
                    "description": "successful operation",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "default",
                },
            ],
        },
        {
            "alias": "loginUser",
            "errors": [
                {
                    "description": "Invalid username/password supplied",
                    "schema": "z.object({
}).passthrough()",
                    "status": 400,
                },
            ],
            "method": "get",
            "parameters": [
                {
                    "description": "The user name for login",
                    "name": "username",
                    "schema": "z.string()",
                    "type": "Query",
                },
                {
                    "description": "The password for login in clear text",
                    "name": "password",
                    "schema": "z.string()",
                    "type": "Query",
                },
            ],
            "path": "/user/login",
            "requestFormat": "json",
            "response": "z.string()",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": ".optional()",
                                "validations": [],
                            },
                        },
                        "type": "string",
                    },
                    "statusCode": "200",
                },
                {
                    "description": "Invalid username/password supplied",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "400",
                },
            ],
        },
        {
            "alias": "logoutUser",
            "errors": [
                {
                    "description": "successful operation",
                    "schema": "z.object({
}).passthrough()",
                    "status": "default",
                },
            ],
            "method": "get",
            "parameters": [],
            "path": "/user/logout",
            "requestFormat": "json",
            "response": "z.object({
}).passthrough()",
            "responses": [
                {
                    "description": "successful operation",
                    "schema": {
                        "metadata": {
                            "circularReferences": [],
                            "dependencyGraph": {
                                "depth": 0,
                                "referencedBy": [],
                                "references": [],
                            },
                            "nullable": false,
                            "required": false,
                            "zodChain": {
                                "defaults": [],
                                "presence": "",
                                "validations": [],
                            },
                        },
                        "type": "object",
                    },
                    "statusCode": "default",
                },
            ],
        },
    ],
}
`;
